cor do obrigado

--- a/css/pags.css
+++ b/css/pags.css
@@ -173,7 +173,7 @@ nav a{
 }
 .feedbackh1{
     text-align: center;
-    color: #0066ffe8;
+    color: #0066ff;
     margin-top: 10%;
     margin-bottom: 0%;
 }
